// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AllocationPieChart > renders chart with data 1`] = `
<div>
  <div
    class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-sm"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-lg font-semibold text-gray-900 dark:text-white"
      >
        Allocation
      </h3>
      <button
        class="inline-flex items-center justify-center gap-2 font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed border bg-transparent border-transparent text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-800 px-3 py-1.5 text-sm rounded-md "
        data-testid="edit-btn"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
        Edit
      </button>
    </div>
    <div
      class="h-64 flex items-center justify-center "
      data-editing="false"
      data-testid="pie-chart-container"
    >
      <div>
        <div>
          <div>
            <div
              data-testid="pie-cell-0"
              fill="#3B82F6"
            />
            <div
              data-testid="pie-cell-1"
              fill="#10B981"
            />
          </div>
          <div />
        </div>
      </div>
    </div>
    <div
      class="mt-4 space-y-2"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex items-center"
        >
          <div
            class="w-3 h-3 rounded-full mr-2"
            style="background-color: rgb(59, 130, 246);"
          />
          <span
            class="text-sm text-gray-600 dark:text-gray-400"
          >
            XLM
          </span>
        </div>
        <span
          class="text-sm font-medium text-gray-900 dark:text-white"
        >
          40
          %
        </span>
      </div>
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex items-center"
        >
          <div
            class="w-3 h-3 rounded-full mr-2"
            style="background-color: rgb(16, 185, 129);"
          />
          <span
            class="text-sm text-gray-600 dark:text-gray-400"
          >
            USDC
          </span>
        </div>
        <span
          class="text-sm font-medium text-gray-900 dark:text-white"
        >
          60
          %
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllocationPieChart > renders empty state 1`] = `
<div>
  <div
    class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-sm"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-lg font-semibold text-gray-900 dark:text-white"
      >
        Allocation
      </h3>
      <button
        class="inline-flex items-center justify-center gap-2 font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed border bg-transparent border-transparent text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-800 px-3 py-1.5 text-sm rounded-md "
        data-testid="edit-btn"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
        Edit
      </button>
    </div>
    <div
      class="h-64 flex items-center justify-center "
      data-editing="false"
      data-testid="pie-chart-container"
    >
      <div>
        <div>
          <div />
          <div />
        </div>
      </div>
    </div>
    <div
      class="mt-4 space-y-2"
    />
  </div>
</div>
`;

exports[`AllocationPieChart > renders loading skeleton 1`] = `
<div>
  <div
    aria-busy="true"
    class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-sm"
    data-testid="allocation-pie-chart-skeleton"
  >
    <div
      class="w-32 h-6 bg-gray-300 dark:bg-gray-700 rounded mb-4 animate-pulse"
    />
    <div
      class="h-48 flex items-center justify-center mb-4"
    >
      <div
        class="w-40 h-40 rounded-full bg-gray-200 dark:bg-gray-700 animate-pulse"
      />
    </div>
  </div>
</div>
`;

exports[`AllocationPieChart > renders single asset 1`] = `
<div>
  <div
    class="bg-white dark:bg-gray-800 rounded-xl p-6 shadow-sm"
  >
    <div
      class="flex items-center justify-between mb-4"
    >
      <h3
        class="text-lg font-semibold text-gray-900 dark:text-white"
      >
        Allocation
      </h3>
      <button
        class="inline-flex items-center justify-center gap-2 font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-500 focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed border bg-transparent border-transparent text-gray-700 dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-800 px-3 py-1.5 text-sm rounded-md "
        data-testid="edit-btn"
      >
        <svg
          class="w-4 h-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
        Edit
      </button>
    </div>
    <div
      class="h-64 flex items-center justify-center "
      data-editing="false"
      data-testid="pie-chart-container"
    >
      <div>
        <div>
          <div>
            <div
              data-testid="pie-cell-0"
              fill="#3B82F6"
            />
          </div>
          <div />
        </div>
      </div>
    </div>
    <div
      class="mt-4 space-y-2"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="flex items-center"
        >
          <div
            class="w-3 h-3 rounded-full mr-2"
            style="background-color: rgb(59, 130, 246);"
          />
          <span
            class="text-sm text-gray-600 dark:text-gray-400"
          >
            XLM
          </span>
        </div>
        <span
          class="text-sm font-medium text-gray-900 dark:text-white"
        >
          100
          %
        </span>
      </div>
    </div>
  </div>
</div>
`;
